Header and table spacing fixes

--- a/docroot/sites/all/themes/chm_theme_kit/css/style.css
+++ b/docroot/sites/all/themes/chm_theme_kit/css/style.css
@@ -7929,6 +7929,9 @@ th.views-field-title {
   color: #000;
   width: 50%;
 }
+.view-cbd-national-targets th.views-field-title {
+  width: 25%;
+}
 #block-views-highlights-block .views-row {
   border-color: #c5c5c5;
 }
@@ -8563,7 +8566,7 @@ body.logged-in #block-chm-search-chm-search:hover input[type="text"] {
 #page-header .logo {
   display: block;
   float: left;
-  margin: 10px 0px 10px 0;
+  margin: 18px 0px 17px;
 }
 [dir="rtl"] #page-header .logo {
   float: right !important;
@@ -9183,7 +9186,7 @@ body #admin-menu .dropdown li {
 }
 .breadcrumb {
   margin-bottom: 0;
-  margin-top: 10px;
+  margin-top: 18px;
   border-radius: 0;
 }
 @media (min-width: 768px) {
@@ -10912,6 +10915,9 @@ table .views-field-title a:hover {
 }
 #views-form-chm-sites-block-chm-network-sites th.views-field-field-url {
   width: 60%;
+}
+.view-cbd-national-targets th.views-field-title {
+  width: 25%;
 }
 .site-footer {
   padding-top: 40px;
