--- a/docroot/sites/all/themes/chm_theme_kit/less/content.less
+++ b/docroot/sites/all/themes/chm_theme_kit/less/content.less
@@ -8,7 +8,7 @@
 }
 .breadcrumb {
   margin-bottom: 0;
-  margin-top: 10px;
+  margin-top: 18px;
   border-radius: 0;
   @media (min-width: @grid-float-breakpoint) {
     li:first-child {
@@ -1935,3 +1935,8 @@ table .views-field-title a:hover {
   th.views-field-title, td.views-field-title { width: 25%; }
   th.views-field-field-url { width: 60%; }
 }
+
+.view-cbd-national-targets th.views-field-title {
+  width:25%;
+}
+
