--- a/docroot/sites/all/themes/chm_theme_kit/less/header.less
+++ b/docroot/sites/all/themes/chm_theme_kit/less/header.less
@@ -55,7 +55,7 @@
     [dir="rtl"] &{
       float:right !important;
     }
-    margin: 10px 0px 10px 0;
+    margin: 18px 0px 17px;
     @media all and (max-width: @screen-xs-max) {
       width: 100%;
       img {
